syntax = "proto3";

package echo;
option go_package = "github.com/peam1146/go_bazel_grpc/echo";

service Echo {
  rpc SayHelloUnary (EchoRequest) returns (EchoReply) {}
}

message EchoRequest {
  string name = 1;
}

message EchoReply {
  string message = 1;
}